using same Cors config as other gbif services